--- a/pages/localizatraumas.html
+++ b/pages/localizatraumas.html
@@ -36,12 +36,6 @@
             color: white;
         }
 
-
-        /* * {
-            box-sizing: border-box;
-        } */
-
-
         .base {
             width: 100vw;
             height: 100%;
@@ -76,6 +70,50 @@
             }
 
         }
+
+        .column {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            /* height: 196vh; */
+            /* margin-top: -3px; */
+            box-sizing: border-box;
+            padding: 15px;
+            justify-content: space-between;
+            background-color: rgba(0, 255, 255, 0.425);
+        }
+
+        .form-group {
+            display: flex;
+            justify-content: center;
+        }
+
+        .container-fluid-linha {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            width: 80%;
+            margin-top: 50px;
+            background-color: #333333;
+            border-radius: 12px;
+        }
+
+        .card-body {
+            display: flex;
+            flex-direction: column;
+            width: 90%;
+        }
+
+        #option{
+            display: flex;
+            background-color: rgba(127, 255, 212, 0.37);
+        }
+
+        /* .form-control{
+            display: flex;
+            width: 100%;
+        } */
     </style>
 
 </head>
@@ -87,7 +125,7 @@
         <nav class="navbar navbar-dark" id="nav">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"> <img src="../images/avatar_bombeiro.png" width="60px"></a>
-                <p class="navbar-title mt-3 fw-bold">TIPO DE OCORRÊNCIA (PRÉ-HOSPITALAR)</p>
+                <p class="navbar-title mt-3 fw-bold">Localização de Traumas</p>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
                     aria-label="Toggle navigation">
@@ -174,19 +212,58 @@
                 </div>
             </div>
         </nav>
-        <div class="fundo mb-2">
-            <div class="card-header mt-3">
-                <div class="text-center">
-                    <h2 class="card-title mb-0">Localização dos Traumas</h2>
+        <div class="column">
+            <form action="">
+                <div class="form-group">
+                    <div class="container-fluid-linha">
+                        <div class="card-body">
+                            <form id="TraumaLocForm">
+                                <div class="texto">
+                                    Adicione um campo de seleção para o tipo de trauma
+                                    <label for="traumaType" class="mt-1 mb-2">Selecione o tipo de trauma:</label>
+                                </div>
+                                <select id="traumaType" class="form-control mb-3">
+                                    <option value="Fratura_Luxacao_Entorse">Fraturas/Luxações/Entorses</option>
+                                    <option value="Ferimentos_diversos">Ferimentos diversos</option>
+                                    <option value="Hemorragia">Hemorragia</option>
+                                    <option value="Evisceracao">Evisceração</option>
+                                    <option value="FAB_FAF">FAB/FAF</option>
+                                    <option value="Amputacao">Amputação</option>
+                                    <option value="Queimadura_1">Queimadura 1° grau</option>
+                                    <option value="Queimadura_2">Queimadura 2° grau</option>
+                                    <option value="Queimadura_3">Queimadura 3° grau</option>
+                                </select>
+                            </form>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="card-body">
-                <form id="TraumaLocForm">
-                    <!-- Adicione um campo de seleção para o tipo de trauma -->
-                    <label for="traumaType" class="mt-1 mb-2">Selecione o tipo de trauma:</label>
-                    <select id="traumaType" class="form-control mb-3">
-                        <!-- Adicione as opções de trauma aqui -->
-                        <option value="Fratura_Luxacao_Entorse">Fraturas/Luxações/Entorses</option>
+            </form>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <!-- <div class="card-body">
+                <form id="TraumaLocForm"> -->
+        <!-- Adicione um campo de seleção para o tipo de trauma -->
+        <!-- <label for="traumaType" class="mt-1 mb-2">Selecione o tipo de trauma:</label>
+                    <select id="traumaType" class="form-control mb-3"> -->
+        <!-- Adicione as opções de trauma aqui -->
+        <!-- <option value="Fratura_Luxacao_Entorse">Fraturas/Luxações/Entorses</option>
                         <option value="Ferimentos_diversos">Ferimentos diversos</option>
                         <option value="Hemorragia">Hemorragia</option>
                         <option value="Evisceracao">Evisceração</option>
@@ -195,21 +272,21 @@
                         <option value="Queimadura_1">Queimadura 1° grau</option>
                         <option value="Queimadura_2">Queimadura 2° grau</option>
                         <option value="Queimadura_3">Queimadura 3° grau</option>
-                    </select>
-                    <div class="row position-relative" id="imageContainer">
-                        <!-- <img id="humanBody" src="/images/corpo_maior.PNG" alt="body-image"> -->
-                    </div>
-                    <!-- Buton to undo -->
-                    <!-- <div class="d-flex justify-content-center mt-4">
+                    </select> -->
+        <!-- <div class="row position-relative" id="imageContainer">
+                        <img id="humanBody" src="/images/corpo_maior.PNG" alt="body-image">
+                    </div> -->
+        <!-- Buton to undo -->
+        <!-- <div class="d-flex justify-content-center mt-4">
                         <button type="button" class="btn btn-light fw-bold" id="undoBtn">Desfazer</button>
                     </div>
                     <div class="d-flex justify-content-between mt-4">
                         <button type="submit" class="btn btn-light" id="backBtn">Voltar</button>
                         <button type="submit" class="btn btn-primary" id="nextBtn">Próximo</button>
                     </div> -->
-                </form>
-            </div>
-        </div>
+        <!-- </form>
+            </div> -->
+    </div>
     </div>
 
 
