--- a/pages/históricocorrencia.html
+++ b/pages/históricocorrencia.html
@@ -148,11 +148,8 @@
     }
     .year-change{
       height: 30px;
-      width: 30px;
       border-radius: 50%;
-      display: grid;
       place-items: center;
-      margin: 0px 10px;
       cursor: pointer;
     }
     .year-change:hover{
@@ -232,6 +229,7 @@
       position: relative;
       top: 140px;
       justify-content: center;
+      display: inline;
     }
     .day-text-formate{
       font-family: "Inter", sans-serif;
@@ -283,6 +281,41 @@
       0%{
         transform: translateX(230%);
         opacity: 1;
+      }100%{
+        transform: translateX(230%);
+        opacity: 1;
+      }
+    }
+    @keyframes to-right{
+      10%{
+        transform: translateX(0%);
+        opacity: 1;
+      }100%{
+        transform: translateX(-150%);
+        opacity: 1;
+      }
+    }
+    @keyframes showtime{
+      0%{
+        transform: translateX(250%);
+        opacity: 1;
+      }100%{
+        transform: translateX(0%);
+        opacity: 1;
+      }
+    }
+    @keyframes hidetime{
+      0%{
+        transform: translateX(0%);
+        opacity: 1;
+      }100%{
+        transform: translateX(-370%);
+        opacity: 1;
+      }
+    }
+    @media (max-widht:375px){
+      .month-list>div{
+        margin: 5px 0px;
       }
     }
 </style>
@@ -668,12 +701,13 @@
                                   <div class="calendar">
                                       <div class="calendar-header d-flex">
                                           <span class="month-picker" id="month-picker">May</span>
-                                          <div class="year-picker d-flex align-items-center" id="year-picker">
+                                          <div class="year-picker d-flex" id="year-picker" style="width: 100px; justify-content: space-between;">
                                               <span class="year-change" id="pre-year">
                                                   <pre><</pre>
                                               </span>
                                               <span id="year">2020</span>
-                                              <span class="year-chenge" id="next-year">
+                                              
+                                              <span class="year-chenge" id="next-year" style="height: 30px;">
                                                   <pre>></pre>
                                               </span>
                                           </div>
