--- a/pages/históricocorrencia.html
+++ b/pages/históricocorrencia.html
@@ -76,248 +76,108 @@
       width: max-content;
       height: max-content;
       position: relative;
-      padding: 2% 0px 0px 0px;
       top: 10%;
       right: 0%;
     }
-    .calendar{
-      height: 610px;
-      width: max-content;
-      background-color: white;
-      border-radius: 25px;
-      overflow: hidden;
-      padding: 30px 50px 0px 50px;
-      box-shadow: var(--shadow);
-    }
-    .calendar-header{
-      background: #9796f0;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      font-weight: 700;
-      color: var(--white);
-      padding: 10px;
-    }
-    .calendar-body{
-      pad: 10px;
-    }
-    .calendar-week-days{
-      grid-template-columns: repeat(7, 1fr);
-      font-weight: 600;
-      cursor: pointer;
-      color: rgb(104, 104, 104);
-    }
-    .calendar-week-days div:hover{
-      color: black;
-      transform: scale(1,2);
-      transition: all .2s ease-in-out;
-    }
-    .calendar-week-days div{
-      display: grid;
-      place-items: center;
-      color: var(--bg-second);
-      height: 50px;
-    }
-    .calendar-days{
-      display: grid;
-      grid-template-columns: repeat(7, 1fr);
-      gap: 2px;
-      color: var(--color-txt);
-    }
-    .calendar-days div{
-      width: 37px;
-      height: 33px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 5px;
-      position: relative;
-      cursor: pointer;
-      animation: to-top 1s forwards;
-    }
-    .month-picker{
-      padding: 5px 10px;
-      border-radius: 10px;
-      cursor: pointer;
-    }
-    .month-picker:hover{
-      background-color: var(--color-hover);
-    }
-    .month-picker:hover{
-      color: var(--color-txt);
-    }
-    .year-change{
-      height: 30px;
-      border-radius: 50%;
-      place-items: center;
-      cursor: pointer;
-    }
-    .year-change:hover{
-      background-color: var(--light-btn);
-      transition: all .2s ease-in-out;
-      transform: scale(1.12);
-    }
-    .year-change:hover pre{
-      color: var(--bg-body);
-    }
-    .calendar-footer{
-      padding: 10px;
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-    }
-    #year:hover{
-      cursor: pointer;
-      transform: scale(1.2);
-      transition: all 0.2s ease-in-out;
-    }
-    .calendar-days div span{
-      position: absolute;
-    }
-    .calendar-days div:hover{
-      transition: width 0.2s ease-in-out, height 0.2s ease-in-out;
-      background-color: #fbc7d4;
-      border-radius: 20%;
-      color: var(--dark-text);
-    }
-    .month-list{
-      position: relative;
-      left: 0;
-      top: -50px;
-      background-color: #ebebeb;
-      color: var(--light-text);
-      display: grid;
-      grid-template-columns: repeat(3, auto);
-      gap: 5px;
-      border-radius: 20px;
-    }
-    .month-list > div{
-      display: grid;
-      place-content: center;
-      margin: 5px 10px;
-      transition: all 0.2s ease-in-out;
-    }
-    .month-list > div > div{
-      border-radius: 15px;
-      padding: 10px;
-      cursor: pointer;
-    }
-    .month-list > div > div:hover{
-      background-color: var(--light-btn);
-      color: var(--dark-text);
-      transform: scale(0.9);
-      transition: all 0.2s ease-in-out;
-    }
-    .month-list .show{
-      visibility: visible;
-      pointer-events: visible;
-      transition: 0.6 ease-in-out;
-      animation: to-left .71s forwards;
-    }
-    .month-list.hideonce{
-      visibility: hidden;
-    }
-    .month-list.hide{
-      animation: to-right 1s forwards;
-      visibility: none;
-      pointer-events: none;
-    }
-    .date-time-formate{
-      width: max-content;
-      height: max-content;
-      font-family: "Inter", sans-serif;
-      position: relative;
-      top: 140px;
-      justify-content: center;
-      display: inline;
-    }
-    .day-text-formate{
-      font-family: "Inter", sans-serif;
-      font-size: 1.4rem;
-      padding-right: 5%;
-      border-right: 3px solid #9796f0;
-      position: absolute;
-      left: -1rem;
-    }
-    .date-time-value{
-      display: block;
-      height: max-content;
-      width: max-content;
-      position: relative;
-      left: 40%;
-      top: -18px;
-      text-align: center;
-    }
-    .time-formate{
-      font-size: 1.5rem;
-    }
-    .time-formate.hideTime{
-      animation: hidetime 1.5s forwards;
-    }
-    .day-text-formate.hidetime{
-      animation: hidetime 1.5s forwards;
-    }
-    .date-formate.hideTime{
-      animation: hidetime 1.5s forwards;
-    }
-    .day-text-formate.showtime{
-      animation: hidetime 1s forwards;
-    }
-    .time-formate.showtime{
-      animation: hidetime 1s forwards;
-    }
-    .date-formate.showtime{
-      animation: hidetime 1s forwards;
-    }
-    @keyframes to-top{
-      0%{
-        transform: translateY(0);
-      }100%{
-          transform: translateY(100%);
-          opacity: 1;
-      }
-    }
-    @keyframes to-left{
-      0%{
-        transform: translateX(230%);
-        opacity: 1;
-      }100%{
-        transform: translateX(230%);
-        opacity: 1;
-      }
-    }
-    @keyframes to-right{
-      10%{
-        transform: translateX(0%);
-        opacity: 1;
-      }100%{
-        transform: translateX(-150%);
-        opacity: 1;
-      }
-    }
-    @keyframes showtime{
-      0%{
-        transform: translateX(250%);
-        opacity: 1;
-      }100%{
-        transform: translateX(0%);
-        opacity: 1;
-      }
-    }
-    @keyframes hidetime{
-      0%{
-        transform: translateX(0%);
-        opacity: 1;
-      }100%{
-        transform: translateX(-370%);
-        opacity: 1;
-      }
-    }
-    @media (max-widht:375px){
-      .month-list>div{
-        margin: 5px 0px;
-      }
-    }
+    .container {
+  color: #eee;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+}
+
+.calendar {
+  width: 59vw;
+  height: 53vh  ;
+  background-color: #222227;
+  box-shadow: 0 0.5rem 3rem rgba(0, 0, 0, 0.4);
+  font-size: 15px;
+}
+
+.month {
+  width: 100%;
+  height: 6rem;
+  background-color: #167e56;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 2rem;
+  text-align: center;
+  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+}
+
+.month i {
+  font-size: 2.5rem;
+  cursor: pointer;
+}
+
+.month h1 {
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+.month p {
+  font-size: 1.2rem;
+}
+
+.weekdays {
+  width: 100%;
+  height: 6vh;
+  padding: 0 0.4rem;
+  display: flex;
+  align-items: center;
+}
+
+.weekdays div {
+  font-size: 1.0rem;
+  font-weight: 400;
+  letter-spacing: 0.1rem;
+  width: calc(44.2rem / 7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+}
+
+.days {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0.2rem;
+}
+
+.days div {
+  font-size: 1.0rem;
+  margin: 0.3rem;
+  width: calc(51.2vw / 7);
+  height: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+  transition: background-color 0.2s;
+}
+
+.days div:hover:not(.today) {
+  background-color: #262626;
+  border: 0.2rem solid #777;
+  cursor: pointer;
+}
+
+.prev-date,
+.next-date {
+  opacity: 0.5;
+}
+
+.today {
+  background-color: #167e56;
+}
+.marked-date {
+  background-color: rgb(89, 93, 104);
+}
+
+
+
 </style>
 </head>
 <body>
@@ -698,47 +558,28 @@
                             <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
 
                               <div class="accordion-body d-flex justify-content-center w-100 h-100">
+                                <div class="container h-25 w-100">
                                   <div class="calendar">
-                                      <div class="calendar-header d-flex">
-                                          <span class="month-picker" id="month-picker">May</span>
-                                          <div class="year-picker d-flex" id="year-picker" style="width: 100px; justify-content: space-between;">
-                                              <span class="year-change" id="pre-year">
-                                                  <pre><</pre>
-                                              </span>
-                                              <span id="year">2020</span>
-                                              
-                                              <span class="year-chenge" id="next-year" style="height: 30px;">
-                                                  <pre>></pre>
-                                              </span>
-                                          </div>
+                                    <div class="month">
+                                      <i class="fas fa-angle-left prev"></i>
+                                      <div class="date mt-3">
+                                        <h1></h1>
+                                        <p></p>
                                       </div>
-
-                                      <div class="calendar-body">
-                                          <div class="calendar-week-days d-grid">
-                                              <div>Sun</div>
-                                              <div>Mon</div>
-                                              <div>Tue</div>
-                                              <div>Wed</div>
-                                              <div>Thu</div>
-                                              <div>Fri</div>
-                                              <div>Sat</div>
-                                          </div>
-                                          <div class="calendar-days">
-
-                                          </div>
-                                      </div>
-                                      <div class="calendar-footer">
-
-                                      </div>
-                                      <div class="date-time-formate">
-                                          <div class="day-text-formate">TODAY</div>
-                                          <div class="date-time-value">
-                                              <div class="time-formate">02:51:20</div>
-                                              <div class="date-formate">23 - july - 2022</div>
-                                          </div>
-                                      </div>
-                                      <div class="month-list"></div>
+                                      <i class="fas fa-angle-right next"></i>
+                                    </div>
+                                    <div class="weekdays">
+                                      <div>Sun</div>
+                                      <div>Mon</div>
+                                      <div>Tue</div>
+                                      <div>Wed</div>
+                                      <div>Thu</div>
+                                      <div>Fri</div>
+                                      <div>Sat</div>
+                                    </div>
+                                    <div class="days"></div>
                                   </div>
+                                </div>
                               </div>
                             </div>
                           </div>
@@ -790,55 +631,101 @@
   
 </body>
 <script>
-  // Função para abrir a modal
-  function openModal() {
-      var modal = document.getElementById("rescheduleModal");
-      modal.style.display = "block";
+ const date = new Date();
+const markedDates = new Set(); // Conjunto para armazenar os dias marcados
+
+const renderCalendar = () => {
+  date.setDate(1);
+
+  const monthDays = document.querySelector(".days");
+
+  const lastDay = new Date(
+    date.getFullYear(),
+    date.getMonth() + 1,
+    0
+  ).getDate();
+
+  const prevLastDay = new Date(
+    date.getFullYear(),
+    date.getMonth(),
+    0
+  ).getDate();
+
+  const firstDayIndex = date.getDay();
+
+  const lastDayIndex = new Date(
+    date.getFullYear(),
+    date.getMonth() + 1,
+    0
+  ).getDay();
+
+  const nextDays = 7 - lastDayIndex - 1;
+
+  const months = [
+    "January",
+    "February",
+    "March",
+    "April",
+    "May",
+    "June",
+    "July",
+    "August",
+    "September",
+    "October",
+    "November",
+    "December",
+  ];
+
+  document.querySelector(".date h1").innerHTML = months[date.getMonth()];
+
+  document.querySelector(".date p").innerHTML = new Date().toDateString();
+
+  let days = "";
+
+  for (let x = firstDayIndex; x > 0; x--) {
+    days += `<div class="prev-date">${prevLastDay - x + 1}</div>`;
   }
 
-  // Função para fechar a modal
-  function closeModal() {
-      var modal = document.getElementById("rescheduleModal");
-      modal.style.display = "none";
+  for (let i = 1; i <= lastDay; i++) {
+    let dayClass = "";
+    
+    if (i === new Date().getDate() && date.getMonth() === new Date().getMonth()) {
+      dayClass = "today";
+    } else if (markedDates.has(i)) {
+      dayClass = "marked-date";
+    }
+
+    days += `<div class="${dayClass}" onclick="toggleMark(${i})">${i}</div>`;
   }
 
-  // Função para gerar o calendário com base no mês e ano selecionados
-  function generateCalendar() {
-      var monthSelect = document.getElementById("month");
-      var yearInput = document.getElementById("year");
-      var daysContainer = document.getElementById("days");
-
-      var monthIndex = monthSelect.value;
-      var year = yearInput.value;
-
-      // Lógica para gerar os dias do calendário (simplificada para exemplo)
-      var daysHtml = "";
-      for (var i = 1; i <= 31; i++) {
-          daysHtml += '<div id=' + i + ' class="dias" onclick="destacar_dias(' + i + ')">' + i + '</div>';
-      }
-
-      daysContainer.innerHTML = daysHtml;
+  for (let j = 1; j <= nextDays; j++) {
+    days += `<div class="next-date">${j}</div>`;
   }
 
-  function destacar_dias(id) {
-      var dia = document.getElementById(id);
-      var dias = document.getElementsByClassName("dias");
-      var pai = document.getElementById("days");
-      for (var i = 1; i < pai.children.length + 1; i++) {
-          var atual = document.getElementById(i);
-          if (atual.classList.contains('selecionado')) {
-              atual.classList.remove('selecionado');
-          }
-      }
-      dia.classList.add('selecionado');
-  }
-  // Função para reagendar o serviço (exemplo)
-  function rescheduleService() {
-      // Lógica para reagendar o serviço (pode ser personalizada conforme suas necessidades)
-      alert("Dia selecionado com sucesso!");
+  monthDays.innerHTML = days;
+};
 
-      // Fechar a modal após reagendar o serviço
-      closeModal();
+const toggleMark = (day) => {
+  if (markedDates.has(day)) {
+    markedDates.delete(day);
+  } else {
+    markedDates.add(day);
   }
+
+  renderCalendar(); // Re-render para refletir as mudanças
+};
+
+document.querySelector(".prev").addEventListener("click", () => {
+  date.setMonth(date.getMonth() - 1);
+  renderCalendar();
+});
+
+document.querySelector(".next").addEventListener("click", () => {
+  date.setMonth(date.getMonth() + 1);
+  renderCalendar();
+});
+
+renderCalendar();
+
 </script>
 </html>
