--- a/pages/anamnesemédica.html
+++ b/pages/anamnesemédica.html
@@ -406,10 +406,10 @@
     <!-- botoes do rodapé -->
     <div class="espaço_botao">
       <div class="botao">
-        <button type="button" class="btn btn-outline-primary btn-lg">
+        <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'procedimentos.html'">
           Voltar
         </button>
-        <button type="button" class="btn btn-outline-primary btn-lg">
+        <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'gestacional.html'">
           Proximo
         </button>
       </div>
