--- a/pages/cadastropaciente.html
+++ b/pages/cadastropaciente.html
@@ -89,6 +89,19 @@
             border-color: none;
             box-shadow: none;
         }
+        .espaço_botao {
+            display: flex;
+            width: 100%;
+            height: 15vh;
+            justify-content: center;
+        }
+
+        .botao {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 90%;
+        }
     </style>
 </head>
 
@@ -334,6 +347,12 @@
                 </div>
             </div>
         </div>
+        <div class="espaço_botao">
+          <div class="botao">
+              <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'obsimportante.html'">Voltar</button>
+              <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'equipedeatendimento.html'">Proximo</button>
+          </div>
+      </div>
     </form>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
