--- a/pages/cinematica.html
+++ b/pages/cinematica.html
@@ -378,8 +378,8 @@
 
     <div class="espaço_botao">
       <div class="botao">
-        <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
-        <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
+        <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'gestacional.html'">Voltar</button>
+        <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'materiaisutilizados.html'">Proximo</button>
       </div>
     </div>
     <script>
