--- a/pages/equipedeatendimento.html
+++ b/pages/equipedeatendimento.html
@@ -254,7 +254,7 @@
 
     <div class="d-flex justify-content-center mt-5" id="botão">
         <div>
-            <button class="btn btn-primary btn-lg" id="botao">Retornar a tela de início</button>
+            <button class="btn btn-primary btn-lg" id="botao" onclick="window.location.href = 'home.html'">Retornar a tela de início</button>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
