--- a/pages/gestacional.html
+++ b/pages/gestacional.html
@@ -429,8 +429,8 @@
     </div>
     <div class="espaço_botao">
         <div class="botao">
-          <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
-          <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
+          <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'anamnesemédica.html'">Voltar</button>
+          <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'cinematica.html'">Proximo</button>
         </div>
       </div>
 
