--- a/pages/materiaisutilizados.html
+++ b/pages/materiaisutilizados.html
@@ -122,6 +122,19 @@
                 width: 54%;
             }
         }
+        .espaço_botao {
+      display: flex;
+      width: 100%;
+      height: 10vh;
+      justify-content: center;
+    }
+
+    .botao {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 90%;
+    }
     </style>
 </head>
 
@@ -739,6 +752,12 @@
                     </div>
         </form>
     </div>
+    <div class="espaço_botao">
+        <div class="botao">
+          <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'cinematica.html'">Voltar</button>
+          <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'obsimportante.html'">Proximo</button>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
