--- a/pages/obsimportante.html
+++ b/pages/obsimportante.html
@@ -234,8 +234,8 @@
         <!-- botoes do rodapé -->
         <div class="espaço_botao">
             <div class="botao">
-                <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
-                <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
+                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'materiaisutilizados.html'">Voltar</button>
+                <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'cadastropaciente.html'">Proximo</button>
             </div>
         </div>
     </div>
