--- a/pages/home.html
+++ b/pages/home.html
@@ -236,7 +236,7 @@
                       <a class="nav-link" aria-current="page" href="#">TELA DE INÍCIO</a>
                     </li>
       
-                    <li class="nav-item dropdown">
+                    <!-- <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         CATEGORIAS
@@ -314,7 +314,7 @@
                           <a class="dropdown-item" href="#" onclick="window.location.href = 'cinematica.html'">AVALIAÇÃO DA CINEMÁTICA</a>
                         </li>
                       </ul>
-                    </li>
+                    </li> -->
                     <li class="nav-item" style="list-style-type: none">
                       <a class="nav-link" href="#" onclick="window.location.href = 'perfilbombeiro.html'">PERFIL</a>
                     </li>
