--- a/pages/localizatraumas.html
+++ b/pages/localizatraumas.html
@@ -277,6 +277,83 @@
                         <button type="button" class="btn btn-outline-primary btn-lg" onclick="window.location.href = 'glasglow.html'">Proximo</button>
                     </div>
                 </div>
+                <div class="container mt-3">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="table-responsive table-container">
+                                <table class="table text-center text-break w-100">
+                                    <tbody>
+                                        <tr>
+                                            <th scope="row"><img src="trauma_icon/Amputacao.png" alt="Amputação"
+                                                    class="img-small"></th>
+                                            <td class="small">Amputação</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row"><img src="trauma_icon/Evisceracao.png" alt="Amputação"
+                                                    class="img-small"></th>
+                                            <td class="small">Evisceração</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row"><img src="trauma_icon/FAB_FAF.png" alt="Amputação"
+                                                    class="img-small"></th>
+                                            <td class="small">FAB/FAF</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="table-responsive table-container">
+                                <table class="table text-center text-break w-100">
+                                    <tbody>
+                                        <tr>
+                                            <th scope="row"><img src="trauma_icon/Ferimentos_diversos.png"
+                                                    alt="Amputação" class="img-small"></th>
+                                            <td class="small">Ferimentos diversos</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row"><img src="trauma_icon/Fratura_Luxacao_Entorse.png"
+                                                    alt="Amputação" class="img-small"></th>
+                                            <td class="small">Fratura/Luxação/Entorse</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row"><img src="trauma_icon/Hemorragia.png" alt="Amputação"
+                                                    class="img-small"></th>
+                                            <td class="small">Hemorragia</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="table-responsive table-container">
+                                <table class="table text-center text-break w-100">
+                                    <tbody>
+                                        <tr>
+                                            <th scope="row"><img src="trauma_icon/Queimadura_1.png" alt="Amputação"
+                                                    class="img-small"></th>
+                                            <td class="small">Queimadura 1° grau</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row"><img src="trauma_icon/Queimadura_2.png" alt="Amputação"
+                                                    class="img-small"></th>
+                                            <td class="small">Queimadura 2° grau</td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row"><img src="trauma_icon/Queimadura_3.png" alt="Amputação"
+                                                    class="img-small"></th>
+                                            <td class="small">Queimadura 3° grau</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-between mt-4">
+                    <button type="submit" class="btn btn-light" id="backBtn">Voltar</button>
+                    <button type="submit" class="btn btn-primary" id="nextBtn">Próximo</button>
+                </div>
 
 
             </form>
